--- a/3_Implementation/Makefile
+++ b/3_Implementation/Makefile
@@ -1,1 +1,11 @@
+Build :
+    gcc Contact_Management_System.h AddContact.c SearchContact.c ViewList.c EditContact.c DeleteContact.c Welcome.c 
 
+Test : 
+    gcc test.c ContactManage.c unity/unity.c -Iunity   
+    
+Windows :
+    gcc ContactManage.c
+
+Run :
+    ./a.out
